--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "formik": "^1.5.1",
     "node-sass": "^4.13.0",
     "p5": "^0.7.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
-    "styled-components": "^4.1.3",
-    "uuid": "^3.3.2"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
