--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "p5": "^0.7.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
