--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,7 @@
         "p5-react": "file:..",
         "react": "file:../node_modules/react",
         "react-dom": "^16.13.0",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.0"
     },
     "scripts": {
