--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.9.9",
+        "@material-ui/icons": "^4.9.1",
         "p5": "^1.0.0",
         "p5-react": "file:..",
         "react": "file:../node_modules/react",
