--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,6 @@
 {
     "name": "p5-react-example",
+    "homepage": "https://loicpennequin.github.io/react-p5/",
     "version": "0.0.0",
     "license": "MIT",
     "private": true,
