--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
         "react": "file:../node_modules/react",
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.0"
+        "react-scripts": "^3.4.0",
+        "react-syntax-highlighter": "^12.2.1"
     },
     "scripts": {
         "start": "react-scripts start",
