--- a/example/package.json
+++ b/example/package.json
@@ -9,11 +9,13 @@
         "@material-ui/icons": "^4.9.1",
         "p5": "^1.0.0",
         "p5-react": "file:..",
+        "prismjs": "^1.20.0",
         "react": "file:../node_modules/react",
         "react-dom": "^16.13.0",
+        "react-highlight.js": "^1.0.7",
+        "react-markdown": "^4.3.1",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.0",
-        "react-syntax-highlighter": "^12.2.1"
+        "react-scripts": "^3.4.0"
     },
     "scripts": {
         "start": "react-scripts start",
