--- a/example/package.json
+++ b/example/package.json
@@ -7,11 +7,13 @@
     "dependencies": {
         "@material-ui/core": "^4.9.9",
         "@material-ui/icons": "^4.9.1",
+        "jsx-to-string": "^1.4.0",
         "p5": "^1.0.0",
         "p5-react": "file:..",
         "prismjs": "^1.20.0",
         "react": "file:../node_modules/react",
         "react-dom": "^16.13.0",
+        "react-element-to-jsx-string": "^14.3.1",
         "react-highlight.js": "^1.0.7",
         "react-markdown": "^4.3.1",
         "react-router-dom": "^5.1.2",
