--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "build": "rollup -c",
         "start": "rollup -c -w",
         "predeploy": "cd example && npm install && npm run build",
-        "deploy": "gh-pages -d example/build"
+        "deploy": "gh-pages -d example/build",
+        "doc:generate": "react-docgen src/shapes/Circle.jsx"
     },
     "peerDependencies": {
         "p5": "^1.0.0",
@@ -54,6 +55,8 @@
     ],
     "dependencies": {
         "babel-eslint": "^10.1.0",
-        "prettier": "^2.0.4"
+        "prettier": "^2.0.4",
+        "prop-types": "^15.7.2",
+        "react-desc": "^4.1.2"
     }
 }
