--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@material-ui/core": "^4.9.9",
         "@material-ui/icons": "^4.9.1",
+        "clsx": "^1.1.0",
         "jsx-to-string": "^1.4.0",
         "p5": "^1.0.0",
         "p5-react": "file:..",
