--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
         "test:watch": "react-scripts test --env=jsdom",
         "build": "rollup -c",
         "start": "rollup -c -w",
-        "predeploy": "cd example && npm install && npm run build",
+        "prebuild:example": "npm run build",
+        "build:example": "cd example && npm install && npm run build",
+        "predeploy": "npm run build:example",
         "deploy": "gh-pages -d example/build",
-        "doc:generate": "react-docgen src/shapes/Circle.jsx"
+        "doc:generate": "node scripts/docs.js",
+        "prepublish": "npm run deploy"
     },
     "peerDependencies": {
         "p5": "^1.0.0",
+        "prop-types": "^15.7.2",
         "react": "^16.13.0"
     },
     "devDependencies": {
@@ -56,7 +60,7 @@
     "dependencies": {
         "babel-eslint": "^10.1.0",
         "prettier": "^2.0.4",
-        "prop-types": "^15.7.2",
-        "react-desc": "^4.1.2"
+        "react-desc": "^4.1.2",
+        "react-docgen": "^5.3.0"
     }
 }
